lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/jikaya5.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|10 Feb 2001 13:57:59 -0000
vti_extenderversion:SR|4.0.2.3712
vti_backlinkinfo:VX|rabbit.htm
vti_nexttolasttimemodified:TR|21 Jan 2001 08:38:15 -0000
vti_author:SR|jikah
vti_modifiedby:SR|jikah
vti_timecreated:TR|10 Feb 2001 13:57:59 -0000
